test/invalid/baseline/int32array-keyword.txt
Syntax error at line 1 in int32array-keyword.webidl:
interface Int32Array {};
          ^ Missing name in interface
